IMPALA-2926: Fix off-by-one bug in SelectNode::CopyRows().

The bug was that we were not updating child_row_idx_
when the output batch was at capacity, leading us to
double count that last child_row_idx_, and incorrectly
returning extra rows.

Change-Id: I85b2f1c146861ec7756887b0d2c574365d90233e
Reviewed-on: http://gerrit.cloudera.org:8080/2044
Reviewed-by: Alex Behm <alex.behm@cloudera.com>
Tested-by: Internal Jenkins
(cherry picked from commit ddb8a833cd00d3467eddd5e3b7ece8f59dbef811)
(cherry picked from commit 5e594761cac6e6fab6ceb89ac2a0b63542983f1b)